--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,13 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "socket.io-client": "^4.6.1",
+    "uuid": "^13.0.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
