--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "npm run vercel-build",
+  "installCommand": "cd client && npm install && cd ../server && npm install",
+  "buildCommand": "cd client && npm run build && cd ../server && npm run build",
   "outputDirectory": "client/dist",
   "builds": [
     {
