--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "dev:client": "cd client && npm run dev",
     "dev:server": "cd server && npm run dev",
     "build": "npm run build:client && npm run build:server",
-    "build:client": "cd client && npm install && npm run build",
-    "build:server": "cd server && npm install && npm run build",
-    "vercel-build": "npm install --prefix client && npm install --prefix server && npm run build:client && npm run build:server",
+    "build:client": "npm install --prefix client && npm run build --prefix client",
+    "build:server": "npm install --prefix server && npm run build --prefix server",
+    "vercel-build": "npm run build:client && npm run build:server",
     "start": "cd server && node dist/index.js",
     "start:production": "NODE_ENV=production cd server && node dist/index.js",
     "preview": "npm run build && npm run start",
