--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "version": 2,
-  "buildCommand": "npm run vercel-build",
+  "buildCommand": "npm install --prefix client && npm run build --prefix client && npm install --prefix server && npm run build --prefix server",
   "outputDirectory": "client/dist",
+  "installCommand": "npm install",
   "builds": [
     {
       "src": "api/index.js",
