Refactor build command in Vercel configuration for streamlined deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "npm install --prefix client && npm run build --prefix client && npm install --prefix server && npm run build --prefix server",
+  "buildCommand": "npm run vercel-build",
   "outputDirectory": "client/dist",
   "installCommand": "npm install",
   "builds": [
