--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd client && npm ci --include=dev && npm run build && cd ../server && npm ci --include=dev && npm run build",
+  "buildCommand": "cd client && npm install --include=dev && npm run build && cd ../server && npm install --include=dev && npm run build",
   "outputDirectory": "client/dist",
   "installCommand": "npm install",
   "rewrites": [
