Add outputDirectory to Vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "buildCommand": "cd server && npm install --include=dev && npm run build",
   "installCommand": "npm install",
+  "outputDirectory": "server/dist",
   "rewrites": [
     {
       "source": "/api/:path*",
