Refactor Vercel configuration and update API export structure

--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,8 @@
   "outputDirectory": "server/dist",
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "/api/index.js"
+      "source": "/(.*)",
+      "destination": "/api"
     }
   ]
 }
