--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "electron": "^39.2.4",
     "electron-builder": "^24.9.1",
     "wait-on": "^7.2.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
