--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
-  "buildCommand": "cd server && npm install --include=dev && npm run build",
-  "installCommand": "npm install",
-  "rewrites": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/(.*)",
-      "destination": "/api"
+      "src": "server/src/index.ts",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "server/src/index.ts"
     }
   ]
 }
