--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "buildCommand": "cd server && npm install && npm run build",
   "builds": [
     {
       "src": "api/index.js",
