--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "version": 2,
-  "buildCommand": "cd server && npm install && npm run build",
   "builds": [
     {
       "src": "api/index.js",
@@ -12,5 +11,6 @@
       "src": "/(.*)",
       "dest": "/api/index.js"
     }
-  ]
+  ],
+  "includeFiles": ["server/dist/**"]
 }
