--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "cd client && npm install --include=dev && npm run build",
     "build:server": "cd server && npm install --include=dev && npm run build",
-    "vercel-build": "npm run build:server",
+    "vercel-build": "cd server && npm install --include=dev && npm run build && cd .. && node scripts/prepare-vercel.js",
     "start": "cd server && node dist/index.js",
     "start:production": "NODE_ENV=production cd server && node dist/index.js",
     "preview": "npm run build && npm run start",
