--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,7 @@
   "builds": [
     {
       "src": "api/index.js",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["server/dist/**"]
-      }
+      "use": "@vercel/node"
     }
   ],
   "routes": [
