--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "dev:server": "cd server && npm run dev",
     "build": "npm run build:client && npm run build:server",
     "build:client": "cd client && npm install --include=dev && npm run build",
-    "build:server": "cd server && npm install --include=dev && npm run build",
-    "vercel-build": "cd server && npm install --include=dev && npm run build && cd .. && node scripts/prepare-vercel.js",
+    "build:server": "cd server && npm install --include=dev && tsc",
+    "prepare:vercel": "node scripts/prepare-vercel.js",
+    "vercel-build": "npm run build:server && npm run prepare:vercel",
     "start": "cd server && node dist/index.js",
     "start:production": "NODE_ENV=production cd server && node dist/index.js",
     "preview": "npm run build && npm run start",
