--- a/.vercelignore
+++ b/.vercelignore
@@ -1,14 +1,10 @@
 node_modules
-.env
 .env.local
-*.log
+\*.log
 .DS_Store
 electron
 electron-builder.json
 ecosystem.config.js
-scripts
 docs
-*.md
-!README.md
 client/node_modules
 server/node_modules
