Refactor API server setup and Vercel configuration for improved structure and health check endpoint

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,8 @@
 {
-  "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "server/src/index.ts",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["server/src/**", "shared/**"]
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/server/src/index.ts"
+      "source": "/(.*)",
+      "destination": "/api"
     }
   ]
 }
