--- a/api/package.json
+++ b/api/package.json
@@ -1,3 +1,9 @@
 {
-  "type": "commonjs"
+  "dependencies": {
+    "express": "^4.18.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "helmet": "^8.1.0",
+    "express-rate-limit": "^8.2.1"
+  }
 }
