--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "helmet": "^8.1.0",
-    "express-rate-limit": "^8.2.1"
+    "express-rate-limit": "^8.2.1",
+    "mysql2": "^3.15.3"
   }
 }
