--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,9 @@
     "cors": "^2.8.5",
     "helmet": "^8.1.0",
     "express-rate-limit": "^8.2.1",
-    "mysql2": "^3.15.3"
+    "mysql2": "^3.15.3",
+    "bcrypt": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^9.0.1"
   }
 }
