--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev:server": "cd server && npm run dev",
     "build": "npm run build:client && npm run build:server",
     "build:client": "cd client && npm install --include=dev && npm run build",
-    "build:server": "cd server && npm install --include=dev && tsc",
+    "build:server": "cd server && npm install --include=dev && npx tsc",
     "prepare:vercel": "node scripts/prepare-vercel.js",
     "vercel-build": "npm run build:server && npm run prepare:vercel",
     "start": "cd server && node dist/index.js",
