--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "client/dist",
-  "installCommand": "npm install",
-  "framework": null,
+  "buildCommand": "cd server && npm install && npx tsc",
+  "outputDirectory": "server/dist",
+  "installCommand": "npm install --prefix server",
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "https://your-backend-url.vercel.app/api/:path*"
+      "source": "/(.*)",
+      "destination": "/dist/index.js"
     }
   ]
 }
