--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
-  "buildCommand": "cd server && npm install && npx tsc",
-  "outputDirectory": "server/dist",
-  "installCommand": "npm install --prefix server",
-  "rewrites": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/(.*)",
-      "destination": "/dist/index.js"
+      "src": "server/src/index.ts",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "server/src/index.ts"
     }
   ]
 }
