--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pizza-pos-client",
   "private": true,
-  "version": "1.0.0",
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -29,5 +29,10 @@
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3",
     "vite": "^7.2.4"
+  },
+  "author": {
+    "name": "Akankha",
+    "email": "info@akankha.com",
+    "url": "https://akankha.com"
   }
 }
