--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/index.js",
     "migrate:rbac": "tsx src/db/migrate-rbac.ts",
     "migrate:orders": "tsx src/db/migrate-order-schema.ts",
+    "migrate:combo-toppings": "tsx src/db/add-combo-toppings.ts",
     "import:menu": "tsx src/db/import-menu.ts"
   },
   "dependencies": {
