feat: Implement dark mode feature with settings management and UI updates
- Added ThemeContext for managing dark mode state and fetching settings from the server.
- Updated main.tsx to include ThemeProvider for global theme management.
- Enhanced AdminSettingsPage to include dark mode toggle and save functionality.
- Modified CheckoutPage, HomePage, NewOrderPage, and PizzaBuilderPage to support dark mode styles.
- Created DARK-MODE.md documentation for setup and usage instructions.
- Added database migration script to include dark_mode column in restaurant_settings table.
- Updated settings route to handle dark_mode updates in the database.

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "migrate:rbac": "tsx src/db/migrate-rbac.ts",
     "migrate:orders": "tsx src/db/migrate-order-schema.ts",
     "migrate:combo-toppings": "tsx src/db/add-combo-toppings.ts",
+    "migrate:dark-mode": "tsx src/db/add-dark-mode.ts",
     "import:menu": "tsx src/db/import-menu.ts"
   },
   "dependencies": {
