--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
+    "react-simple-keyboard": "^3.8.139",
     "socket.io-client": "^4.6.1",
     "uuid": "^13.0.0",
     "zustand": "^4.4.7"
