--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-simple-keyboard": "^3.8.139",
     "socket.io-client": "^4.6.1",
     "uuid": "^13.0.0",
+    "xlsx": "^0.18.5",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
